test/zinc_source/compile_errors/callables/06_lambda_capture_parameter.zn
// expected-error: lambda expressions cannot capture outer variable 'x'
fn wrap(x) {
    f = fn() {
        return x
    }

    return f()
}

fn main() {
    print(wrap(1))
}
